# api-integration

./: README.md
dotnet/: .gitignore  GenerateTransaction.cs  PaylabsSignature.cs  Program.cs  QuickStart.csproj  README.md  VerifyCallback.cs  run.bat  run.sh
dotnet/wwwroot/js/: client.js
go/: .gitignore  README.md  go.mod  main.go
go/callback/: main.go
go/views/: index.html
java/: .gitignore  README.md  pom.xml
java/src/main/java/id/paylabs/qris/: Application.java  GenerateTransaction.java  PaylabsSignature.java  VerifyCallback.java
java/src/main/resources/static/: index.html
node.js/: .env.example  .gitignore  README.md  generateTransaction.js  package-lock.json  package.json  paylabsSignature.js  verifyCallback.js
node.js/views/css/: style.css
php/: .gitignore  PaylabsSignature.php  README.md  composer.json  generateTransaction.php  last_callback.json  verifyCallback.php
php/views/js/: client.js
python/: .gitignore  README.md  generate_transaction.py  paylabs_signature.py  requirements.txt  run.bat  run.sh  verify_callback.py
python/views/js/: client.js
rust/: .gitignore  Cargo.toml  README.md  errors.txt
rust/src/: callback.rs  main.rs  signature.rs
