[package]
name = "quick-start-qris"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.21"
hex = "0.4"
chrono = "0.4"
dotenv = "0.15"
rand = "0.8"
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

[[bin]]
name = "generate_qris"
path = "src/main.rs"

[[bin]]
name = "callback_server"
path = "src/callback.rs"

